# libportfwd

./: .gitignore  LICENSE  README.md  bootstrap.sh  meson.build  meson_options.txt
build-gcc/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  config.h
build-gcc/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
build-gcc/meson-logs/: meson-log.txt
build-gcc/meson-private/: coredata.dat.prev
dependencies/: meson.build
dependencies/miniupnpc/: meson.build
dependencies/qt5/: meson.build
extra/: meson.build
include/portfwd/: portfwd.h
src/: main.cpp  meson.build  portfwd.cpp
subprojects/miniupnpc/: meson.build
subprojects/miniupnpc/src/: meson.build
subprojects/miniupnpc/src/miniupnpc/: meson.build  miniupnpcstrings.h.in
