# libportfwd project build options
#============================================================================

# compiler args
#============================================================================

option(
    'ldflags',
    type : 'array',
    value : [
        '-L/usr/local/lib',
        '-L/usr/lib',
        '-L/lib'],
    description : 'Link flags')


option(
    'cxxflags',
    type : 'array',
    value : [
        '-Wdeprecated', 
        '-Wno-non-virtual-dtor',
        '-Wno-unused-parameter'],
    description : 'C build flags')


# link args
#============================================================================


# optional dependancies
#============================================================================
