# Hatchet dependencies build file
#============================================================================


# Required dependencies
#---------------------------------------------------
dependencies_dirs = [
    'miniupnpc',
    'qt5']


# OS Specific Dependencies
#---------------------------------------------------


# build Dependencies
#---------------------------------------------------
foreach dir : dependencies_dirs
    subdir(dir)
endforeach
